--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,7 @@
     "outDir": "./build", /* Redirect output structure to the directory. */
     "strict": true, /* Enable all strict type-checking options. */
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
-    "exclude": [
-      "node_modules/@types/node/index.d.ts"
-    ]
+    "skipLibCheck": true  
   },
   "exclude": [
     "node_modules"
